--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: gcc-9 | gcc-8 | gcc-7 | gcc-6 | gcc-5 (>=5.4),
  gstreamer1.0-plugins-base, gstreamer1.0-plugins-good, libglib2.0-dev, gstreamer1.0-x,   
  gstreamer1.0-tools, libgtest-dev, libpng-dev, libopencv-dev, liborc-0.4-dev, flex, bison,
  python, python3, python3-dev, python3-numpy, python2.7-dev
+Standards-Version: 4.6.0
 
 Package: opennccframe
 Architecture: any
