--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,6 @@
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 ROOT_DIR:=$(shell pwd)
 export DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-export DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 export BUILDDIR=build
 export NNSTREAMER_SOURCE_ROOT_PATH=$(ROOT_DIR)/nnstmp
 export NNSTREAMER_BUILD_ROOT_PATH=${NNSTREAMER_SOURCE_ROOT_PATH}/${BUILDDIR}
@@ -51,10 +50,10 @@ endif
 	git apply 0001-Filter-Decoder-Add-option-for-ncc-and-fix-bug-of-box.patch
 # According to Debian policy (and, IIRC, the Filesystem Hierarchy Standard or FHS), official Debian packages are not permitted to own files or directories under /usr/local
 	cd ${NNSTREAMER_SOURCE_ROOT_PATH} && mkdir -p build;\
-	meson --buildtype=plain --prefix=/usr --sysconfdir=/etc --libdir=lib/$(DEB_HOST_MULTIARCH) --bindir=lib/nnstreamer/bin --includedir=include -Denable-test=false ${BUILDDIR}
+	meson --buildtype=plain --prefix=/usr --sysconfdir=/etc --libdir=/usr/lib/$(DEB_HOST_MULTIARCH) --bindir=/usr/lib/nnstreamer/bin --includedir=/usr/include -Denable-test=false ${BUILDDIR}
 	@echo "Start to config ncc frame meson build"
 	cd ${NCCFRAME_SOURCE_ROOT_PATH} && mkdir -p build;\
-	meson --buildtype=plain --prefix=/usr --sysconfdir=/etc --libdir=lib/$(DEB_HOST_MULTIARCH) --bindir=lib/openncc/bin --includedir=include ${BUILDDIR}
+	meson --buildtype=plain --prefix=/usr --sysconfdir=/etc --libdir=/usr/lib/$(DEB_HOST_MULTIARCH) --bindir=/usr/lib/openncc/bin --includedir=/usr/include ${BUILDDIR}
 
 
 override_dh_auto_build:
@@ -64,16 +63,20 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	DESTDIR=$(CURDIR)/debian/tmp ninja -C ${NNSTREAMER_BUILD_ROOT_PATH} install
-	./install.sh auto $(CURDIR)/debian/tmp/usr
+	./install.sh auto $(CURDIR)/debian/tmp ninja
 	DESTDIR=$(CURDIR)/debian/tmp ninja -C ${NCCFRAME_BUILD_ROOT_PATH} install
-	cp -rf nnstreamer/example $(CURDIR)/debian/tmp/usr/lib/openncc
-	cp -rf native_vpu_api/example $(CURDIR)/debian/tmp/usr/lib/openncc
+	mkdir -p $(CURDIR)/debian/tmp/usr/lib/openncc/example/nnstreamer
+	mkdir -p $(CURDIR)/debian/tmp/usr/lib/openncc/example/native
+	cp -rf nnstreamer/example/* $(CURDIR)/debian/tmp/usr/lib/openncc/example/nnstreamer
+	cp -rf native_vpu_api/example/* $(CURDIR)/debian/tmp/usr/lib/openncc/example/native
 
 override_dh_install:
 #	dh_install
 	dh_install --sourcedir=debian/tmp --list-missing
 # Add --fail-missing option after adding *.install files for all subpackages.
 
+#override_dh_shlibdeps:
+#	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
 
 override_dh_clean:
 	dh_clean $@
