--- a/nnstreamer/gst/tensor_source/tensor_src_ncc/meson.build
+++ b/nnstreamer/gst/tensor_source/tensor_src_ncc/meson.build
@@ -9,7 +9,7 @@ base_deps = [
   ncc_dep
 ]
 
-incdir = include_directories('/usr/local/include/openncc')
+incdir = include_directories('/usr/include/openncc')
 
 sources = [
   'tensor_src_ncc.cpp'
